bug fixes, fully functional menu bar on mobile.

--- a/src/containers/main/mid-col/main-disp/main-page/main-page.css
+++ b/src/containers/main/mid-col/main-disp/main-page/main-page.css
@@ -1,3 +1,4 @@
 .mobile-nav-bar{
-    margin-bottom: 10px;
+    margin-bottom: 6px;
+    margin-top:4px;
 }
