--- a/src/containers/main/mid-col/main-disp/main-page/nav-bar-mobile/nav.css
+++ b/src/containers/main/mid-col/main-disp/main-page/nav-bar-mobile/nav.css
@@ -1,3 +1,7 @@
 .col-div{
     align-content:center;
 }
+.mobile-nav-bar{
+    margin-bottom: 6px;
+    margin-top:4px;
+}
